Fixed mapview outlets.

--- a/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
         <plugIn identifier="com.apple.MapKitIBPlugin" version="13771"/>
+        <capability name="Unknown constraint types" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -715,14 +716,16 @@
                             </mapView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="3Wx-qs-iJq" secondAttribute="trailing" id="1oC-xj-IoK"/>
-                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="BXr-2d-c6h"/>
-                            <constraint firstAttribute="bottom" secondItem="3Wx-qs-iJq" secondAttribute="bottom" id="GEQ-dL-Nev"/>
-                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="K9C-MO-enb"/>
+                            <constraint firstAttribute="bottom" secondItem="3Wx-qs-iJq" secondAttribute="bottom" id="62t-B2-eJi"/>
+                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="N9H-Jy-h2d"/>
+                            <constraint firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="OUb-UL-9Xl"/>
+                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="hxt-lp-JRy"/>
+                            <constraint firstAttribute="trailing" secondItem="3Wx-qs-iJq" secondAttribute="trailing" id="udI-Zg-RBh"/>
+                            <constraint firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="xgX-gz-l3X"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="mapView" destination="3Wx-qs-iJq" id="Yqz-7q-jcK"/>
+                        <outlet property="mapView" destination="3Wx-qs-iJq" id="XB9-LP-cCx"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
