--- a/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
@@ -702,6 +702,25 @@
             </objects>
             <point key="canvasLocation" x="-555" y="196"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="cFE-uP-Cmy">
+            <objects>
+                <viewController id="8mX-yP-Gqw" sceneMemberID="viewController">
+                    <view key="view" id="avx-R8-9n4">
+                        <rect key="frame" x="0.0" y="0.0" width="915" height="605"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <mapView fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Whx-N6-QwU">
+                                <rect key="frame" x="0.0" y="0.0" width="915" height="605"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </mapView>
+                        </subviews>
+                    </view>
+                </viewController>
+                <customObject id="3VW-UK-vHH" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="22.5" y="839.5"/>
+        </scene>
         <!--Map View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
@@ -743,7 +762,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-554.5" y="808.5"/>
+            <point key="canvasLocation" x="-1018" y="840"/>
         </scene>
         <!--Gesture Demo Controller-->
         <scene sceneID="bet-cy-fkr">
