--- a/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
-        <plugIn identifier="com.apple.MapKitIBPlugin" version="13771"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -680,83 +678,6 @@
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-555" y="-24"/>
-        </scene>
-        <!--Window Controller-->
-        <scene sceneID="R2V-B0-nI4">
-            <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <connections>
-                            <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
-                        </connections>
-                    </window>
-                    <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="R2z-IT-auy"/>
-                    </connections>
-                </windowController>
-                <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-555" y="196"/>
-        </scene>
-        <!--Map View Controller-->
-        <scene sceneID="hIz-AP-VOD">
-            <objects>
-                <viewController id="XfG-lQ-9wD" customClass="MapViewController" customModule="MapExplorer_macOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="915" height="605"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <mapView mapType="standard" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" showsCompass="NO" showsZoomControls="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Wx-qs-iJq">
-                                <rect key="frame" x="0.0" y="0.0" width="305" height="605"/>
-                            </mapView>
-                            <mapView mapType="standard" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" showsCompass="NO" showsZoomControls="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aW8-r4-sci">
-                                <rect key="frame" x="305" y="0.0" width="305" height="605"/>
-                            </mapView>
-                            <mapView mapType="standard" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" showsCompass="NO" showsZoomControls="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USC-xw-dai">
-                                <rect key="frame" x="610" y="0.0" width="305" height="605"/>
-                            </mapView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="USC-xw-dai" firstAttribute="width" secondItem="3Wx-qs-iJq" secondAttribute="width" id="2hZ-eW-Ix9"/>
-                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="5Cl-1Q-lOa"/>
-                            <constraint firstItem="3Wx-qs-iJq" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="9Dq-ud-2oq"/>
-                            <constraint firstAttribute="bottom" secondItem="USC-xw-dai" secondAttribute="bottom" id="Azi-ou-Zuo"/>
-                            <constraint firstItem="USC-xw-dai" firstAttribute="leading" secondItem="aW8-r4-sci" secondAttribute="trailing" id="GDl-sk-2wg"/>
-                            <constraint firstItem="USC-xw-dai" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="K4h-8I-fXp"/>
-                            <constraint firstItem="aW8-r4-sci" firstAttribute="width" secondItem="3Wx-qs-iJq" secondAttribute="width" id="YBh-Sh-Bif"/>
-                            <constraint firstAttribute="trailing" secondItem="USC-xw-dai" secondAttribute="trailing" id="ij5-u7-uIY"/>
-                            <constraint firstAttribute="bottom" secondItem="aW8-r4-sci" secondAttribute="bottom" id="kOR-5M-sU7"/>
-                            <constraint firstAttribute="bottom" secondItem="3Wx-qs-iJq" secondAttribute="bottom" id="pmy-cA-04m"/>
-                            <constraint firstItem="aW8-r4-sci" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="x5r-hL-FCh"/>
-                            <constraint firstItem="aW8-r4-sci" firstAttribute="leading" secondItem="3Wx-qs-iJq" secondAttribute="trailing" id="z2A-dU-dSs"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="mapView" destination="3Wx-qs-iJq" id="XB9-LP-cCx"/>
-                        <outlet property="mapView2" destination="aW8-r4-sci" id="5ng-sh-Dva"/>
-                        <outlet property="mapView3" destination="USC-xw-dai" id="niO-pc-CDY"/>
-                    </connections>
-                </viewController>
-                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1018" y="840"/>
-        </scene>
-        <!--Gesture Demo Controller-->
-        <scene sceneID="bet-cy-fkr">
-            <objects>
-                <viewController id="TYt-an-uvq" customClass="GestureDemoController" customModule="MapExplorer_macOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="vyE-sq-SWh">
-                        <rect key="frame" x="0.0" y="0.0" width="732" height="460"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </view>
-                </viewController>
-                <customObject id="3Mv-vb-yqs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="343" y="-345"/>
         </scene>
     </scenes>
 </document>
