--- a/MapExplorer-macOS/Sources/Controllers/PlaceViewController/Place.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/PlaceViewController/Place.storyboard
@@ -130,26 +130,21 @@
                                             <constraint firstAttribute="height" constant="30" id="DUg-an-qOr"/>
                                         </constraints>
                                     </customView>
-                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mLq-My-PVk">
+                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mLq-My-PVk" userLabel="Player Button">
                                         <rect key="frame" x="54" y="91" width="123" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <buttonCell key="cell" type="push" title="Video Button " bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vor-S8-bDo">
+                                        <buttonCell key="cell" type="push" title="Video Button " bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vor-S8-bDo" userLabel="Player Button">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system"/>
+                                            <connections>
+                                                <action selector="videoButtonTapped:" target="k5b-MF-Zdf" id="IZ5-EZ-aAR"/>
+                                            </connections>
                                         </buttonCell>
-                                        <connections>
-                                            <action selector="videoButtonTapped:" target="k5b-MF-Zdf" id="AuB-oc-O7P"/>
-                                        </connections>
                                     </button>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uMm-WP-6h4">
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TRM-ly-veh" userLabel="Player Button View">
                                         <rect key="frame" x="54" y="91" width="123" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="jhN-rk-Chc">
-                                            <font key="font" size="20" name="LucidaGrande-Bold"/>
-                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                    </textField>
+                                    </customView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Pqy-Rw-Og1" firstAttribute="leading" secondItem="XEF-WZ-sT9" secondAttribute="leading" id="3ZF-4X-Mlo"/>
@@ -177,8 +172,7 @@
                         <outlet property="closeButton" destination="8wA-OD-SXO" id="5QL-IQ-avo"/>
                         <outlet property="closeButtonView" destination="U1m-am-vcE" id="IP8-TO-V2B"/>
                         <outlet property="detailView" destination="ldO-fp-Tec" id="aR4-sd-eIk"/>
-                        <outlet property="playerButton" destination="uMm-WP-6h4" id="HM3-Ln-9kU"/>
-                        <outlet property="playerButtonView" destination="uMm-WP-6h4" id="w3B-Qe-CSq"/>
+                        <outlet property="playerButtonView" destination="TRM-ly-veh" id="DaK-OW-P5M"/>
                         <outlet property="relatedView" destination="ohw-Ux-hDf" id="RSn-s9-ecN"/>
                         <outlet property="scrollView" destination="nLk-Sj-wEx" id="723-iL-Rki"/>
                         <outlet property="titleLabel" destination="Pqy-Rw-Og1" id="L6U-Le-HIq"/>
